added baseUrl to trio.json since this site will be hosted on Github pages

--- a/source/includes/nav.html
+++ b/source/includes/nav.html
@@ -2,5 +2,5 @@
 appendToTarget: true
 -->
 
-<a data-trio-lin href="/">Home</a>
-<a data-trio-lin href="/">About</a>
+<a data-trio-link href="/">Home</a>
+<a data-trio-link href="/">About</a>
